# 1902_final_project

./: .gitignore  README.md  package-lock.json  package.json  requirements.txt  vector_search.py  vercel.json
.github/workflows/: main.yml
api/: profile_search.py
app/: globals.css  page.tsx
backend/: dependencies.py  main.py  pyproject.toml  requirements.txt  run.py
backend/models/: user.py
backend/routes/: auth.py  elo.py  info.py  leaderboard.py  search.py  users.py
backend/scripts/: clearElo.py  copyDatabase.py
backend/src/: __init__.py  api.py  app.py  auth.py  elo.py  leaderboard.py  linkedin_profile.py  profile_search.py  school_info.py  text_generation.py  user.py  vector_search.py
frontend/: .eslintignore  .eslintrc.json  jest.config.js  jest.setup.js  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/.million/: store.json
frontend/app/: constants.ts  globals.css  layout.tsx  opengraph-image.alt.txt  page.tsx  providers.tsx  twitter-image.tsx
frontend/app/elo/: page.tsx
frontend/components/: ComparisonTool.tsx  header.tsx  loading-overlay-update.tsx  meta-tags.tsx  profile-dialog.tsx  streaming-text-block.tsx
frontend/tests/: Header.test.tsx
frontend/types/: next-auth.d.ts
linkd/: app.config.js  app.json  package-lock.json  package.json
linkd/app/: _layout.tsx  auth.tsx  home.tsx  index.tsx  linkedin.tsx  search.tsx
linkd/components/: AuthButton.tsx
linkd/constants/: Config.ts
linkd/context/: AuthContext.tsx
linkd/types/: global.d.ts
src/: api.py  profile_search.py  scrape.py
(+21 files in other folders)
