[tool.poetry]
name = "final-project"
version = "0.1.0"
description = "Alumni database and search"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
openai = "^1.54.4"
fastapi = "^0.115.5"
selenium = "^4.1.0"
requests = "^2.32.3"
supabase = "^2.10.0"
httpx = "^0.27.2"
jinja2 = "^3.1.4"
pymongo = "^4.10.1"
google-generativeai = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
